poster.css
.poster {
  --poster-h1-fontsize:30px;
  --poster-p-fontsize:28px;
}
.poster__container{
  width:100%;
  height: 164.7vh;
  background-color:white;
  padding-top: 16vh;
  padding-bottom: 6.5%;
}

.poster__content {
  width:100%;
  height:100%;
  display:grid;  
  grid-template-rows: 100%;
  grid-template-columns: repeat(2, 1fr);
  position: relative;
}
.poster__text-cell{
  position:relative;
  
  width: 100%;
  height: 100%;
}

.poster__text-content{
  position:absolute;
  top: 50%;
  left: 49%;
  transform:  translateX(-50%) translateY(-50%);;
}

.poster__text-content h1{
  font-size:var(--poster-h1-fontsize);
  font-family: var(--standard-font-family);
  text-align:center;
}
.poster__text-content p {
  font-size:var(--poster-p-fontsize);
  font-family: var(--standard-font-family);
  text-align:center;
}

.poster__text-layout {
  width:100%;
  height:100%;
  
  
}

.poster__image {
  position: 100%;
  width: 100%;
  height: 100%;
}

.poster__image img{
  width:100%;
  height:100%;
  object-fit:cover;
}

